--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -69,7 +69,7 @@ disable_top_img: false
 default_top_img: https://cdn.jsdelivr.net/gh/daxianz/image-resource/%E7%94%BB%E4%BA%86%E5%A5%B3%E6%BC%82%E6%B3%8A%E8%80%85%EF%BC%81.jpg
 
 # The banner image of index page
-index_img:
+index_img: https://cdn.jsdelivr.net/gh/daxianz/image-resource/%E7%94%BB%E4%BA%86%E5%A5%B3%E6%BC%82%E6%B3%8A%E8%80%85%EF%BC%81.jpg
 
 # The banner image of archive page
 archive_img:
@@ -91,11 +91,10 @@ category_img:
 category_per_img:
 
 # The background image of footer
-footer_img: https://cdn.jsdelivr.net/gh/daxianz/image-resource/%E5%BA%95%E9%83%A8%E5%9B%BE3.jpg
+footer_img: transparent
 # Website Background
 # Can set it to color or image url
-background: https://cdn.jsdelivr.net/gh/daxianz/image-resource/%E5%AD%A9%E5%AD%90%E6%98%9F%E7%A9%BA-%E8%83%8C%E6%99%AF%E5%9B%BE.jpg
-
+background: https://cdn.jsdelivr.net/gh/daxianz/image-resource/%E6%BC%82%E6%B3%8A%E7%9A%84%E7%BB%88%E7%82%B9-%E6%84%BF%E4%B8%8E%E4%BD%A0%E5%85%B1%E5%A5%8F%E5%AE%88%E5%B2%B8.png
 cover:
   # Disable the cover or not
   index_enable: true
@@ -771,8 +770,8 @@ text_align_justify: false
 
 # Add a mask to the header and footer
 mask:
-  header: true
-  footer: true
+  header: false
+  footer: false
 
 # Loading Animation
 preloader:
