--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ timezone: "Asia/Shanghai"
 
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
-url: http://example.com
+url: http://daxianz.fun
 permalink: :year/:month/:day/:title/
 permalink_defaults:
 pretty_urls:
@@ -111,5 +111,5 @@ deploy:
 search:
   path: search.xml
   field: post
-  content: true
-  template: ./search.xml
+  format: html
+  limit: 1000
