写在大二结束

--- a/_config.yml
+++ b/_config.yml
@@ -113,3 +113,12 @@ search:
   field: post
   format: html
   limit: 1000
+
+# 图片懒加载
+lazyload:
+  enable: true
+  onlypost: true
+  loadingImg: https://dlink.host/wx1.sinaimg.cn/large/008E1Bgely8hxcfjl10r5g30go0b4dhy.gif
+  cdn:
+    enabled: true
+    url: https://cdn.jsdelivr.net/gh/daxianz/image-resource
