--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -11,7 +11,7 @@
 
 nav:
   # Navigation bar logo image
-  logo: https://cdn.jsdelivr.net/gh/daxianz/image-resource/%E5%A4%AA%E6%9E%81%E5%85%AB%E5%8D%A6%E5%9B%BElogo.jpg
+  logo: https://dlink.host/wx3.sinaimg.cn/large/008E1Bgely8hxcfs4ou4vj30i20i3abe.jpg
   display_title: true
   # Whether to fix navigation bar
   fixed: false
